# sudoku-solver

./: .ghci  README.md  Sudoku.hs  solver.hs  sudoku-solver.cabal
Sudoku/: SimpleSolver.hs  Strategy.hs
Sudoku/Strategy/: NakedPairs.hs  NakedSingle.hs
src/: Main.hs  Sudoku.hs
src/Sudoku/: Examples.hs  GUI.hs  Strategy.hs
src/Sudoku/GUI/: Button.hs  Events.hs  Menu.hs  Raster.hs  Solver.hs  State.hs
src/Sudoku/GUI/Solver/: FourTimesFour.hs  NineTimesNine.hs  TwelveTimesTwelve.hs
src/Sudoku/Strategy/: HiddenPairs.hs  HiddenSingle.hs  NakedPairs.hs  NakedSingle.hs
