name:               sudoku-solver
version:            0.0.1
description:        A Sudoku Solver with GUI
license:            MIT
license-file:       LICENSE
author:             Thomas Brus
maintainer:         thomasbrus92@gmail.com
build-type:         Simple
cabal-version:      >=1.14

Executable sudoku-solver
  main-is:          Sudoku/GUI.hs
  build-depends:    base >= 3 && < 5,
                    twentefp >= 0.4.1
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall

source-repository head
  type:             git
  location:         git://github.com/thomasbrus/sudoku-solver.git
