name:               sudoku-solver
version:            0.0.1
description:        A Sudoku Solver with GUI
license:            MIT
license-file:       LICENSE
author:             Thomas Brus
maintainer:         thomasbrus92@gmail.com
build-type:         Simple
cabal-version:      >=1.14

extra-source-files: README.md

Executable sudoku-solver
  main-is:          Main.hs
  build-depends:    base >= 3 && < 5,
                    twentefp >= 0.4.1
  default-language: Haskell2010
  hs-source-dirs:   src

Library
  build-depends:    base >= 3 && < 5,
                    twentefp >= 0.4.1
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall

  exposed-modules:  Sudoku
                    Sudoku.Examples
                    Sudoku.Strategy
                    Sudoku.Strategy.NakedSingle
                    Sudoku.Strategy.NakedPairs
                    Sudoku.Strategy.HiddenSingle

  other-modules:    Sudoku.GUI
                    Sudoku.GUI.Button
                    Sudoku.GUI.Events
                    Sudoku.GUI.Menu
                    Sudoku.GUI.Raster
                    Sudoku.GUI.Solver
                    Sudoku.GUI.State

source-repository head
  type:             git
  location:         git://github.com/thomasbrus/sudoku-solver.git
